--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ font-size:200%;
 
     <div>
       <p>تعليم اللغه الانجليزية</p>
-      <p>نايف نفيع السلمي 1/6 </p>
+      <p>نايف فلاح الرشيدي 1/6 </p>
         </table>
     </div>
     <table class="center">
